          Now it has :type too (Lacton).
* Change: Eclipse task updated to documented Scala plugin requirements
          (http://www.scala-lang.org/node/94)
* Change: Buildr.application.buildfile returns a task instead of a String.
* Change: BUILDR-139 Incremental test run.
* Change: BUILDR-141 Removed NEXT_VERSION from release task.
* Fixed:  BUILDR-106 download(artifact(...)=>url) broken in certain cases
          (Lacton).
* Fixed:  BUILDR-108 Trace to explain why a compile is done (Lacton).
* Fixed:  BUILDR-109 Failure of "Buildr::Filter should respond to :include and
          use these inclusion patterns" (Lacton).
* Fixed:  BUILDR-110 Error creating buildfile from POM when missing plugin
          configuration (Geoffrey Ruscoe).
* Fixed:  BUILDR-112 Using a user gem repository with 'rake setup' (Lacton).
* Fixed:  BUILDR-114 Hash.from_java_properties does not behave
          like java.util.Properties (Lacton).
* Fixed:  BUILDR-117 Shared directory for both code and resources produces 
          duplicate Eclipse classpath entries (Nathan Hamblen)
* Fixed:  BUILDR-116: TestTask should include the main compile target in its
          dependencies, even when using non standard directories (Lacton).
* Fixed:  BUILDR-119 Eclipse task does not accept test resource folders
          (Lacton)
* Fixed:  BUILDR-122: eclipse task should not check for directory existence
* Fixed:  BUILDR-123: eclipse task should honor ResourceTask's target directory
* Fixed:  BUILDR-124 unzip(...).from_path does not work correctly without
          include (Rhett Sutphin).
* Fixed:  BUILDR-126  Tests options are shared between unrelated projects when
          using #options instead of #using (Lacton).
* Fixed:  Should not display "(in `pwd`, development)" when using --quiet.
* Fixed:  Release task's regexp to find either THIS_VERSION and VERSION_NUMBER.
* Fixed:  BUILDR-138 ScalaTest premature use of Buildr::Repositories
          inconsistent with customizing locations.