@@ -17,6 +17,8 @@
 * Change: Buildr.application.buildfile returns a task instead of a String.
 * Change: BUILDR-139 Incremental test run.
 * Change: BUILDR-141 Removed NEXT_VERSION from release task.
+* Fixed:  BUILDR-129. Modifying a project manifest should not alter it's
+          parent project manifest.
 * Fixed:  BUILDR-106 download(artifact(...)=>url) broken in certain cases
           (Lacton).
 * Fixed:  BUILDR-108 Trace to explain why a compile is done (Lacton).
